--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2021"
 name = "client"
 path = "src/client.rs"
 
+[[bin]]
+name = "md5-hashcash"
+path = "src/md5-hashcash.rs"
+
 [dependencies]
 serde = { version = "1", features = ["serde_derive"]}
 serde_json = "1"
 rand = "0.8"
+md5 = "0.7.0"
